# gruel

./: .buckconfig  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  Makefile  README.md  bench.sh  bench_cache.sh  fmt.sh  gen-rust-project.sh  mdbook  quick-test.sh  reindeer  rust-project.json  rust-toolchain.toml  tailwindcss  test.sh  zola
.beads/: config.yaml  issues.jsonl  redirect
.cargo/: config.toml
.claude/: settings.local.json
.claude/commands/: code-review.md  commit.md  design-adr.md  design.md  feature.md  fix-conflicts.md  implement.md  plan.md  rebase.md  revise.md  ship.md
.github/workflows/: benchmarks.yml  ci.yml  deploy-website.yml  fuzz.yml
benchmarks/: README.md  history-aarch64-linux.json  history-aarch64-macos.json  history-linux.json  history-macos.json  history-x86-64-linux.json  manifest.toml
benchmarks/cache/: comptime_heavy.gruel  runtime_heavy.gruel
benchmarks/stress/: arithmetic_heavy.rue  array_heavy.rue  comptime_heavy.gruel  control_flow.rue  deep_nesting.rue  large_structs.gruel  large_structs.rue  many_functions.gruel  many_functions.rue  register_pressure.rue
constraints/: BUCK
crates/gruel/: BUCK  Cargo.toml  build.rs
crates/gruel-air/: BUCK  Cargo.toml
crates/gruel-air/src/: analysis_state.rs  function_analyzer.rs  inst.rs  intern_pool.rs  layout.rs  lib.rs  param_arena.rs  scope.rs  sema_context.rs  specialize.rs  types.rs
crates/gruel-air/src/inference/: constraint.rs  generate.rs  types.rs  unify.rs
crates/gruel-air/src/sema/: analysis.rs  analyze_ops.rs  anon_enums.rs  anon_interfaces.rs  anon_structs.rs  builtin_methods.rs  builtins.rs  comptime.rs  conformance.rs  consistency_tests.rs  context.rs  declarations.rs  file_paths.rs  gather.rs  imports.rs  inference_ctx.rs  info.rs  intrinsics.rs  known_symbols.rs  lang_items.rs  mod.rs  module_path.rs  output.rs  pointer_ops.rs  sema_ctx_builder.rs  tests.rs  typeck.rs  usefulness.rs  vec_methods.rs  visibility.rs
crates/gruel-builtins/: BUCK  Cargo.toml
crates/gruel-cache/: Cargo.toml
crates/gruel-cache/src/: compiler_fp.rs  fingerprint.rs  lib.rs  remap.rs  signature.rs  store.rs  wire.rs  wire_air.rs
crates/gruel-cfg/: BUCK  Cargo.toml
crates/gruel-cfg/src/: build.rs  drop_names.rs  inst.rs  lib.rs
crates/gruel-cfg/src/opt/: constfold.rs  dce.rs  mod.rs
crates/gruel-codegen/: BUCK  Cargo.toml
crates/gruel-codegen-llvm/: Cargo.toml
crates/gruel-codegen-llvm/src/: codegen.rs  lib.rs  opt_level.rs  types.rs
crates/gruel-codegen/src/: cfg_lower.rs  index_map.rs  lib.rs  liveness.rs  regalloc.rs  stack_frame.rs  types.rs  vreg.rs
crates/gruel-codegen/src/aarch64/: cfg_lower.rs  emit.rs  mir.rs  mod.rs  peephole.rs  regalloc.rs  schedule.rs  verify.rs
crates/gruel-codegen/src/x86_64/: cfg_lower.rs  emit.rs  mir.rs  mod.rs  peephole.rs  regalloc.rs  schedule.rs  verify.rs
crates/gruel-compiler/: BUCK  Cargo.toml  build.rs
crates/gruel-compiler/src/: clone_glue.rs  diagnostic.rs  drop_glue.rs  lib.rs  link.rs  parse_cache.rs  prelude_source.rs  unit.rs
crates/gruel-error/: BUCK  Cargo.toml
crates/gruel-fuzz/: BUCK  Cargo.toml  README.md
crates/gruel-fuzz/src/: codegen_generators.rs  corpus.rs  generators.rs  main.rs  mutate.rs  targets.rs
crates/gruel-intrinsics/: Cargo.toml
crates/gruel-intrinsics/src/: lib.rs
crates/gruel-lexer/: BUCK  Cargo.toml
crates/gruel-linker/: BUCK  Cargo.toml
crates/gruel-parser/: BUCK  Cargo.toml
crates/gruel-parser/src/: ast.rs  chumsky_parser.rs  lib.rs
crates/gruel-rir/: BUCK  Cargo.toml
crates/gruel-rir/src/: astgen.rs  inst.rs  lib.rs  print.rs
crates/gruel-runtime/: BUCK  Cargo.toml
crates/gruel-runtime/src/: debug.rs  entry.rs  error.rs  heap.rs  io.rs  lib.rs  parse.rs  platform.rs  random.rs  string.rs  thread.rs  utf8.rs  x86_64_linux.rs
crates/gruel-span/: BUCK  Cargo.toml
crates/gruel-spec/: BUCK  Cargo.toml
crates/gruel-target/: BUCK  Cargo.toml
crates/gruel-test-runner/: BUCK  Cargo.toml
crates/gruel-test-runner/src/: lib.rs
crates/gruel-ui-tests/: BUCK  Cargo.toml
crates/gruel-util/: Cargo.toml
crates/gruel/src/: main.rs  timing.rs
crates/rue/: BUCK
crates/rue-air/: BUCK
crates/rue-builtins/: BUCK
crates/rue-cfg/: BUCK
crates/rue-codegen/: BUCK
crates/rue-compiler/: BUCK
crates/rue-elf/: BUCK
crates/rue-error/: BUCK
crates/rue-fuzz/: BUCK  README.md
crates/rue-intern/: BUCK
crates/rue-lexer/: BUCK
crates/rue-linker/: BUCK
crates/rue-parser/: BUCK
crates/rue-rir/: BUCK
crates/rue-runtime/: BUCK
crates/rue-span/: BUCK
crates/rue-spec/: BUCK  spec.md
crates/rue-target/: BUCK
crates/rue-test-runner/: BUCK
crates/rue-ui-tests/: BUCK
docs/: architecture.md  design-decisions.md  development.md  language.md  perf-branch.md  roadmap.md
docs/designs/: 0000-template.md  0001-never-type.md  0002-single-pass-bidirectional-types.md  0003-constant-evaluation.md  0004-enum-types.md  0005-preview-features.md  0006-zola-unified-website.md  (+100 more)
examples/: arrays.gruel  arrays.rue  binary_search.gruel  closures.gruel  collatz.gruel  dbg.gruel  enums.gruel  expected.toml  fibonacci.gruel  fizzbuzz.rue  floats.gruel  for_loops.gruel  gcd.gruel  generics.gruel  generics.rue  hello.gruel  match.gruel  match.rue  methods.gruel  option_result.gruel  power.gruel  primes.gruel  quicksort.gruel  shapes.gruel  spawn.gruel  strings.gruel  structs.gruel  structs.rue  tuples.gruel  vec.gruel
fuzz/: Cargo.toml
fuzz/fuzz_targets/: compiler.rs  comptime_differential.rs  cross_backend.rs  emitter.rs  emitter_sequence.rs  lexer.rs  parser.rs  structured_compiler.rs  structured_emitter.rs  structured_invalid.rs
fuzz/src/: lib.rs
prelude/: _prelude.gruel  char.gruel  cmp.gruel  interfaces.gruel  join_handle.gruel  option.gruel  runtime.gruel  runtime_wrappers.gruel  string.gruel  target.gruel  type_info.gruel  vec.gruel
scripts/: append-benchmark.py  enhance-benchmark.py  generate-charts.py
std/: _prelude.gruel  _std.gruel  _std.rue  math.rue
toolchains/: BUCK  remote_test_execution.bzl
website/: .gitignore  build.sh  config.toml
(+546 files in other folders)
