[workspace]
resolver = "2"
members = [
    "crates/gruel",
    "crates/gruel-air",
    "crates/gruel-builtins",
    "crates/gruel-cfg",
    "crates/gruel-codegen",
    "crates/gruel-compiler",
    "crates/gruel-error",
    "crates/gruel-fuzz",
    "crates/gruel-lexer",
    "crates/gruel-linker",
    "crates/gruel-parser",
    "crates/gruel-rir",
    "crates/gruel-runtime",
    "crates/gruel-span",
    "crates/gruel-target",
    "crates/gruel-test-runner",
    "crates/gruel-ui-tests",
    "crates/gruel-spec",
]
# gruel-runtime is no_std and staticlib-only, so exclude it from cargo test --workspace
# Run: cargo test --workspace --exclude gruel-runtime

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
# Internal crates
gruel-air = { path = "crates/gruel-air" }
gruel-builtins = { path = "crates/gruel-builtins" }
gruel-cfg = { path = "crates/gruel-cfg" }
gruel-codegen = { path = "crates/gruel-codegen" }
gruel-compiler = { path = "crates/gruel-compiler" }
gruel-error = { path = "crates/gruel-error" }
gruel-lexer = { path = "crates/gruel-lexer" }
gruel-linker = { path = "crates/gruel-linker" }
gruel-parser = { path = "crates/gruel-parser" }
gruel-rir = { path = "crates/gruel-rir" }
gruel-span = { path = "crates/gruel-span" }
gruel-target = { path = "crates/gruel-target" }
gruel-test-runner = { path = "crates/gruel-test-runner" }

# External dependencies
annotate-snippets = "0.11"
anyhow = "1.0"
chumsky = { version = "1.0.0-alpha.7", features = ["pratt"] }
fixedbitset = "0.5"
lasso = { version = "0.7", features = ["multi-threaded"] }
libc = "0.2"
libtest2-mimic = "0.0.4"
logos = "0.14"
proptest = "1.5"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
smallvec = "1.15"
tempfile = "3"
thiserror = "2.0"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# gruel-runtime is built with special flags (panic=abort, opt-level=z, etc.)
# via gruel-compiler's build.rs using a direct rustc invocation.
# No per-package profile overrides needed here.
