[package]
name = "gruel-air"
version.workspace = true
edition.workspace = true
description = "Typed IR produced by semantic analysis"

[dependencies]
gruel-builtins.workspace = true
gruel-error.workspace = true
gruel-lexer.workspace = true
gruel-parser.workspace = true
gruel-rir.workspace = true
gruel-span.workspace = true
gruel-target.workspace = true
lasso.workspace = true
rayon.workspace = true
