[package]
name = "gruel-air"
version.workspace = true
edition.workspace = true
description = "Typed IR produced by semantic analysis"

[dependencies]
gruel-builtins.workspace = true
gruel-intrinsics.workspace = true
tracing.workspace = true
gruel-lexer.workspace = true
gruel-parser.workspace = true
gruel-rir.workspace = true
gruel-target.workspace = true
gruel-util.workspace = true
lasso.workspace = true
rayon.workspace = true
rustc-hash.workspace = true
serde.workspace = true

[dev-dependencies]
bincode.workspace = true
