[package]
name = "gruel-cache"
version.workspace = true
edition.workspace = true
description = "On-disk content-addressed cache for incremental compilation (ADR-0074)"

[dependencies]
blake3 = "1.5"
libc.workspace = true
rustc-hash.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
