[package]
name = "gruel-cache"
version.workspace = true
edition.workspace = true
description = "On-disk content-addressed cache for incremental compilation (ADR-0074)"

[dependencies]
bincode.workspace = true
blake3 = "1.5"
gruel-parser.workspace = true
gruel-rir.workspace = true
gruel-util.workspace = true
lasso.workspace = true
libc.workspace = true
rustc-hash.workspace = true
serde.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
