[package]
name = "gruel-cfg"
version.workspace = true
edition.workspace = true

[dependencies]
gruel-air.workspace = true
gruel-error.workspace = true
gruel-span.workspace = true
lasso.workspace = true

[dev-dependencies]
gruel-lexer.workspace = true
gruel-parser.workspace = true
gruel-rir.workspace = true
