[package]
name = "gruel-cfg"
version.workspace = true
edition.workspace = true
description = "Control flow graph construction and optimization"

[dependencies]
gruel-air.workspace = true
gruel-util.workspace = true
lasso.workspace = true
strum.workspace = true

[dev-dependencies]
gruel-lexer.workspace = true
gruel-parser.workspace = true
gruel-rir.workspace = true
