[package]
name = "gruel-codegen-llvm"
version.workspace = true
edition.workspace = true
description = "LLVM-based code generation for the Gruel compiler"

[dependencies]
gruel-air.workspace = true
gruel-cfg.workspace = true
gruel-error.workspace = true
lasso.workspace = true

[dependencies.inkwell]
version = "0.9"
features = ["llvm22-1"]
