[package]
name = "gruel-codegen"
version.workspace = true
edition.workspace = true
description = "Machine code generation for x86-64 and AArch64"

[dependencies]
gruel-air.workspace = true
gruel-builtins.workspace = true
gruel-cfg.workspace = true
gruel-error.workspace = true
gruel-span.workspace = true
gruel-target.workspace = true
fixedbitset.workspace = true
lasso.workspace = true

[dev-dependencies]
gruel-lexer.workspace = true
gruel-parser.workspace = true
gruel-rir.workspace = true
