[package]
name = "gruel-compiler"
version.workspace = true
edition.workspace = true
build = "build.rs"

[dependencies]
gruel-air.workspace = true
gruel-cfg.workspace = true
gruel-codegen.workspace = true
gruel-error.workspace = true
gruel-lexer.workspace = true
gruel-linker.workspace = true
gruel-parser.workspace = true
gruel-rir.workspace = true
gruel-span.workspace = true
gruel-target.workspace = true
annotate-snippets.workspace = true
lasso.workspace = true
rayon.workspace = true
serde_json.workspace = true
tracing.workspace = true
