[package]
name = "gruel-compiler"
version.workspace = true
edition.workspace = true
description = "Compiler pipeline orchestration"
build = "build.rs"

[features]
default = ["llvm-dynamic"]
llvm-dynamic = ["gruel-codegen-llvm/llvm-dynamic"]
llvm-static = ["gruel-codegen-llvm/llvm-static"]

[dependencies]
gruel-air.workspace = true
gruel-cfg.workspace = true
gruel-codegen-llvm.workspace = true
gruel-error.workspace = true
gruel-lexer.workspace = true
gruel-parser.workspace = true
gruel-rir.workspace = true
gruel-span.workspace = true
gruel-target.workspace = true
annotate-snippets.workspace = true
lasso.workspace = true
rayon.workspace = true
serde_json.workspace = true
tracing.workspace = true
