[package]
name = "gruel-fuzz"
version.workspace = true
edition.workspace = true

[[bin]]
name = "gruel-fuzz"
path = "src/main.rs"

[dependencies]
gruel-codegen.workspace = true
gruel-compiler.workspace = true
gruel-lexer.workspace = true
gruel-parser.workspace = true
anyhow.workspace = true
proptest.workspace = true
