[package]
name = "gruel-intrinsics"
version.workspace = true
edition.workspace = true
description = "Declarative registry of Gruel @intrinsics (names, signatures, runtime bindings, docs)"

[dependencies]
gruel-error = { workspace = true }
rustc-hash.workspace = true

[[bin]]
name = "gruel-intrinsics-docs"
path = "src/bin/docs.rs"
