[package]
name = "gruel-parser"
version.workspace = true
edition.workspace = true
description = "AST construction from token stream"

[dependencies]
gruel-error.workspace = true
gruel-lexer.workspace = true
gruel-span.workspace = true
chumsky.workspace = true
lasso.workspace = true
smallvec.workspace = true
