[package]
name = "gruel-parser"
version.workspace = true
edition.workspace = true
description = "AST construction from token stream"

[dependencies]
gruel-lexer.workspace = true
gruel-util.workspace = true
chumsky.workspace = true
lasso.workspace = true
serde.workspace = true
smallvec = { workspace = true, features = ["serde"] }
