[package]
name = "gruel-rir"
version.workspace = true
edition.workspace = true
description = "Untyped IR (post-parse, pre-semantic analysis)"

[dependencies]
gruel-builtins.workspace = true
gruel-intrinsics.workspace = true
gruel-lexer.workspace = true
gruel-parser.workspace = true
gruel-util.workspace = true
lasso.workspace = true
serde.workspace = true
