[package]
name = "gruel-test-runner"
version.workspace = true
edition.workspace = true
description = "Shared test runner infrastructure for spec and UI tests"

[dependencies]
gruel-error.workspace = true
rustc-hash.workspace = true
serde.workspace = true
tempfile.workspace = true
toml.workspace = true
walkdir.workspace = true
