[package]
name = "gruel-test-runner"
version.workspace = true
edition.workspace = true
description = "Shared test runner infrastructure for spec and UI tests"

[dependencies]
gruel-util.workspace = true
libtest2-mimic.workspace = true
rustc-hash.workspace = true
serde.workspace = true
tempfile.workspace = true
toml.workspace = true
walkdir.workspace = true

[[bin]]
name = "gruel-ui-tests"
path = "src/bin/gruel-ui-tests.rs"

[[bin]]
name = "gruel-examples-tests"
path = "src/bin/gruel-examples-tests.rs"
