[package]
name = "gruel"
version.workspace = true
edition.workspace = true
description = "Gruel compiler CLI binary"

[features]
llvm18 = ["gruel-compiler/llvm18"]

[dependencies]
gruel-compiler.workspace = true
gruel-rir.workspace = true
gruel-target.workspace = true
libc.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
