[package]
name = "gruel"
version.workspace = true
edition.workspace = true
description = "Gruel compiler CLI binary"

[features]
default = ["llvm-dynamic"]
llvm-dynamic = ["gruel-compiler/llvm-dynamic"]
llvm-static = ["gruel-compiler/llvm-static"]

[dependencies]
gruel-compiler.workspace = true
gruel-rir.workspace = true
gruel-target.workspace = true
clap.workspace = true
libc.workspace = true
rustc-hash.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
